import { PlatformDatePicker } from "@/components/PlatformDatePicker";
import { DeleteConfirmDialog } from "@/components/todoEditing/DeleteConfirmDialog";
import { PrioritySelectModal } from "@/components/todoEditing/PrioritySelectModal";
import { StateChangeModal } from "@/components/todoEditing/StateChangeModal";
import {
  Timestamp,
  Todo,
  TodoStatesResponse,
  TodoUpdates,
} from "@/services/api";
import { dateToTimestamp } from "@/utils/timestampConversion";

export type EditModalType =
...
